# HR-Hunter_Hafeedh

./: .env.example  .gitignore  README.md  TEAM_README.md  pyproject.toml
UI/: HR Hunter APP.bat  app.js  index.html  styles.css
docs/: agent-notes-20260416.md  client-ready-live-validation-20260416.md  codex-production-handoff.md  gcp-mcp.md  local-transformer-validation-20260415.md  team-readme.md
examples/matrices/: sr_product_lead_ai_jan26_ireland_fmcg.yaml
examples/search_briefs/: junior_data_scientist_uae.yaml  senior_data_analyst_uae.yaml  sr_product_lead_ai_jan26.yaml  sr_product_lead_ai_jan26_discovery_incremental.yaml  sr_product_lead_ai_jan26_expanded.yaml  sr_product_lead_ai_jan26_fmcg_brand_focus_public.yaml  sr_product_lead_ai_jan26_fmcg_deep_public.yaml  sr_product_lead_ai_jan26_fmcg_history_knn_public.yaml  (+16 more)
scripts/: install_codex_global_mcp.sh  install_on_gcp_vm.sh  prune_project_runs.py  run_remote_search.sh
tests/: test_api.py  test_briefing.py  test_db.py  test_engine.py  test_feedback.py  test_orchestrator.py  test_output.py  test_query_planner.py  test_ranker.py  test_recruiter_app.py  test_reranker.py  test_runtime_backup.py  test_runtime_health.py  test_runtime_maintenance.py  test_runtime_restore.py  test_scoring.py  test_scrapingbee.py  test_sheets.py  test_state.py  test_transformer_bridge.py  test_transformer_company_quality.py  test_transformer_config.py  test_transformer_evidence_graph.py  test_transformer_extraction.py  test_transformer_pipeline_ordering.py  test_transformer_query_planner.py  test_transformer_ranking.py  test_transformer_scrapingbee_adapter.py  test_transformer_verifier.py  test_verifier.py  test_workspace.py
(+73 files in other folders)
