[project]
name = "hr-hunter"
version = "0.1.0"
description = "Executive search assistant focused on fast, verifiable candidate retrieval."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "httpx>=0.28.0",
  "PyYAML>=6.0.2",
]

[project.optional-dependencies]
api = [
  "fastapi>=0.116.0",
  "uvicorn>=0.35.0",
]
dev = [
  "pytest>=8.3.0",
]

[project.scripts]
hr-hunter = "hr_hunter.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
