[project]
name = "hr-hunter"
version = "0.1.0"
description = "Executive search assistant focused on fast, verifiable candidate retrieval."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.28.0",
  "PyYAML>=6.0.2",
]

[project.optional-dependencies]
api = [
  "fastapi>=0.116.0",
  "uvicorn>=0.35.0",
]
dev = [
  "pytest>=8.3.0",
]
reranker = [
  "torch>=2.2.0",
  "transformers>=4.40.0",
]
ranker = [
  "lightgbm>=4.6.0",
  "scikit-learn>=1.7.0",
]
mcp = [
  "mcp[cli]>=1.0.0",
]
sheets = [
  "gspread>=6.1.2",
  "google-auth>=2.40.0",
]

[project.scripts]
hr-hunter = "hr_hunter.cli:main"
hr-hunter-gcp-mcp = "hr_hunter.gcp_mcp:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
